<resources>
    <string name="app_name">Apple</string>
    <string name="action_settings">Settings</string>
    <string name="new_order">新增订单</string>
    <string name="show_orders">订单一览</string>
    <string name="setting">个性设置</string>
    <string name="other">其他选项</string>

    <!--fragment new order-->
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="area">区县</string>
    <string name="address">地址</string>
    <string name="name">姓名</string>
    <string name="phone">手机</string>
    <string name="type">规格</string>
    <string name="quantity">数量</string>
    <string name="place_order">提交订单</string>

    <!--fragment setting -->
    <string name="add_type">增加规格</string>
    <string name="address_manager">地址管理</string>

    <!--fragment other-->
    <string name="pending_send">未发货</string>
    <string name="has_sent">已发货</string>
    <string name="total_price">总货款</string>
    <string name="author">作者：Fred Liu, 时间：2015-11-25, 版本：1.0.0</string>

    <!-- order detail activity-->
    <string name="order_id">订单号</string>
    <string name="user_name">姓名</string>
    <string name="is_sent">是否发货</string>
    <string name="is_paid">是否支付</string>
    <string name="created">下单时间</string>
    <string name="sent_time">发货时间</string>
    <string name="delete_order">删除订单</string>
    <string name="send_message">发送短信</string>

</resources>
