<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:background="@color/color_999"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <RadioGroup
        android:id="@+id/tab_bottom"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/new_order"
            style="@style/tab_radio_style"
            android:text="@string/new_order" />

        <RadioButton
            android:id="@+id/show_orders"
            style="@style/tab_radio_style"
            android:text="@string/show_orders" />

        <RadioButton
            android:id="@+id/setting"
            style="@style/tab_radio_style"
            android:text="@string/setting" />

        <RadioButton
            android:id="@+id/others"
            style="@style/tab_radio_style"
            android:text="@string/other" />

    </RadioGroup>

</LinearLayout>