<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_province"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/province"
                    android:textSize="24sp"/>

                <AutoCompleteTextView
                    android:id="@+id/edit_province"
                    android:completionThreshold="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>

            <LinearLayout
                android:id="@+id/item_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/city"
                    android:textSize="24sp"/>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>

            <LinearLayout
                android:id="@+id/item_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textSize="24sp"/>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>

            <LinearLayout
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="24sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>


            <LinearLayout
                android:id="@+id/item_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textSize="24sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>

            <LinearLayout
                android:id="@+id/item_specifications"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/type"
                    android:textSize="24sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>

            <LinearLayout
                android:id="@+id/item_quantity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/order_item_common"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textSize="24sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_999"/>

            <Button
                android:id="@+id/new_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/place_order"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
